# NewsCrawl

./: .gitignore  Dockerfile  config.py  pyproject.toml  requirements.txt  setting.py  settings.yaml  spyder_linux_do.py  spyder_v2.py  test1.py  tools.py
.github/workflows/: python-app.yml
custom/: CustomRequestBuffer.py
items/: __init__.py  news_item.py  reply_item.py  subject_item.py
spyders/: common.py  rss_links.py  spyder_linux_do.py  spyder_v2.py
task/: task_rss.py
