[tool.poetry]
name = "newscrawl"
version = "0.1.0"
description = ""
authors = ["pandatools <761326926@qq.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
feapder = {extras = ["render"], version = "^1.9.0"}
drissionpage = "^4.1.0.4"
dynaconf = "^3.2.6"
feedparser = "^6.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
